Allow Automatic Transaction Matching Across Accounts
Removed account number from the query that searches for transactions with the same/similar description as an incoming transaction. This allows new accounts to "learn" from previously imported transactions in existing accounts